--- a/index.html
+++ b/index.html
@@ -2,263 +2,339 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Rizwan N Portfolio</title>
+<title>Rizwan N — Portfolio</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+
 <style>
-* { box-sizing: border-box; }
 
-body {
-  margin: 0;
-  font-family: "Segoe UI", Arial, sans-serif;
-  background: #f8fafc;
-  color: #111827;
-  overflow-x: hidden;
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:'Poppins',sans-serif;
+scroll-behavior:smooth;
 }
 
-/* HERO */
-.hero {
-  text-align: center;
-  padding: 60px 20px;
-  color: white;
-  background: linear-gradient(-45deg,#0ea5e9,#22c55e,#6366f1,#a855f7);
-  background-size: 400% 400%;
-  animation: gradientMove 10s ease infinite;
+body{
+background:#ffffff;
+color:#111;
+overflow-x:hidden;
 }
 
-@keyframes gradientMove {
-  0% {background-position:0% 50%;}
-  50% {background-position:100% 50%;}
-  100% {background-position:0% 50%;}
+/* ---------- Background streaks ---------- */
+
+.bg-streak{
+position:fixed;
+width:600px;
+height:600px;
+border-radius:50%;
+filter:blur(120px);
+opacity:.25;
+z-index:-1;
 }
 
-.profile {
-  width: 140px;
-  height: 140px;
-  border-radius: 50%;
-  object-fit: cover;
-  border: 6px solid white;
-  margin-bottom: 15px;
-  transition: transform .4s;
+.streak1{background:#4f8cff; top:-200px; left:-200px;}
+.streak2{background:#00ffd0; bottom:-200px; right:-200px;}
+.streak3{background:#ffb347; top:40%; left:60%;}
+
+/* ---------- Cursor glow ---------- */
+
+.cursor-glow{
+position:fixed;
+width:200px;
+height:200px;
+border-radius:50%;
+background:radial-gradient(circle,#4f8cff33,transparent);
+pointer-events:none;
+z-index:9999;
+transform:translate(-50%,-50%);
+transition:transform .08s linear;
 }
 
-.profile:hover {
-  transform: scale(1.08) rotate(2deg);
+/* ---------- Navbar ---------- */
+
+nav{
+position:sticky;
+top:0;
+background:#ffffffcc;
+backdrop-filter:blur(12px);
+display:flex;
+justify-content:space-between;
+padding:18px 40px;
+box-shadow:0 5px 20px rgba(0,0,0,.06);
+z-index:100;
 }
 
-.hero h1 { margin: 10px 0 5px; font-size: 34px; }
-.hero p { font-size: 18px; opacity: .95; }
-
-/* Section headers */
-h2 {
-  cursor: pointer;
-  background: white;
-  padding: 16px;
-  margin: 26px auto 10px;
-  border-radius: 14px;
-  max-width: 1000px;
-  box-shadow: 0 6px 18px rgba(0,0,0,.08);
-  transition: transform .2s;
+nav a{
+text-decoration:none;
+color:#111;
+margin-left:22px;
+font-weight:600;
 }
 
-h2:hover { transform: scale(1.02); }
-
-.content {
-  display: none;
-  max-width: 1000px;
-  margin: auto;
-  padding: 10px 20px 30px;
-  animation: fadeIn .4s ease;
+nav a:hover{
+color:#4f8cff;
 }
 
-@keyframes fadeIn {
-  from {opacity:0; transform:translateY(10px);}
-  to {opacity:1; transform:translateY(0);}
+/* ---------- Hero ---------- */
+
+.hero{
+display:flex;
+align-items:center;
+justify-content:center;
+flex-direction:column;
+padding:120px 20px 80px;
+text-align:center;
 }
 
-/* Cards */
-.card, .main-card {
-  background: white;
-  padding: 20px;
-  margin: 16px 0;
-  border-radius: 16px;
-  box-shadow: 0 10px 26px rgba(0,0,0,.08);
-  transition: transform .2s, box-shadow .2s;
-  transform-style: preserve-3d;
+.hero img{
+width:180px;
+border-radius:50%;
+box-shadow:0 20px 50px rgba(0,0,0,.15);
+transition:.4s;
 }
 
-.main-card { border-left: 6px solid #22c55e; }
-.card { border-top: 5px solid #0ea5e9; }
-
-/* Buttons */
-.btn {
-  display: inline-block;
-  margin-top: 10px;
-  padding: 10px 16px;
-  background: linear-gradient(120deg,#0ea5e9,#22c55e);
-  color: white;
-  text-decoration: none;
-  border-radius: 10px;
-  font-weight: bold;
-  transition: .25s;
+.hero img:hover{
+transform:scale(1.08);
 }
 
-.btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 8px 22px rgba(0,0,0,.18);
+.hero h1{
+font-size:52px;
+font-weight:800;
+margin-top:25px;
+background:linear-gradient(90deg,#4f8cff,#00ffd0);
+-webkit-background-clip:text;
+-webkit-text-fill-color:transparent;
 }
 
-/* About text */
-.about-text {
-  font-size: 19px;
-  line-height: 1.75;
+.hero p{
+font-size:20px;
+margin-top:10px;
+opacity:.8;
 }
 
-/* Skill bubbles */
-.bubble {
-  display: inline-block;
-  background: linear-gradient(120deg,#e0f2fe,#dcfce7);
-  padding: 9px 15px;
-  margin: 6px;
-  border-radius: 999px;
-  font-weight: 600;
-  font-size: 14px;
-  transition: transform .2s, box-shadow .2s;
+/* ---------- Section ---------- */
+
+section{
+padding:90px 8%;
 }
 
-.bubble:hover {
-  transform: translateY(-3px) scale(1.05);
-  box-shadow: 0 6px 14px rgba(0,0,0,.15);
+.section-title{
+font-size:34px;
+font-weight:800;
+margin-bottom:40px;
 }
+
+/* ---------- Glass Cards ---------- */
+
+.card{
+background:#ffffffcc;
+backdrop-filter:blur(10px);
+border-radius:22px;
+padding:30px;
+box-shadow:0 20px 60px rgba(0,0,0,.08);
+transition:.35s;
+transform-style:preserve-3d;
+}
+
+.card:hover{
+transform:translateY(-8px) scale(1.02);
+box-shadow:0 30px 80px rgba(0,0,0,.14);
+}
+
+/* ---------- About ---------- */
+
+.about-text{
+font-size:19px;
+line-height:1.9;
+font-weight:400;
+}
+
+/* ---------- Skills nested blocks ---------- */
+
+.skill-main{
+background:#f7f9ff;
+padding:28px;
+border-radius:20px;
+margin-bottom:24px;
+box-shadow:inset 0 0 0 2px #eef2ff;
+}
+
+.skill-main h3{
+margin-bottom:16px;
+font-size:20px;
+}
+
+.bubble{
+display:inline-block;
+background:#ffffff;
+padding:10px 16px;
+border-radius:999px;
+margin:8px;
+font-size:14px;
+box-shadow:0 6px 18px rgba(0,0,0,.08);
+transition:.25s;
+}
+
+.bubble:hover{
+transform:scale(1.12);
+background:#4f8cff;
+color:#fff;
+}
+
+/* ---------- Grid ---------- */
+
+.grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+gap:30px;
+}
+
+/* ---------- Buttons ---------- */
+
+.btn{
+display:inline-block;
+padding:14px 22px;
+border-radius:14px;
+background:#4f8cff;
+color:#fff;
+text-decoration:none;
+font-weight:600;
+transition:.3s;
+}
+
+.btn:hover{
+transform:translateY(-3px);
+box-shadow:0 12px 30px rgba(79,140,255,.4);
+}
+
+/* ---------- Contact ---------- */
+
+.contact p{
+margin:12px 0;
+font-size:18px;
+}
+
+/* ---------- Reveal animation ---------- */
+
+.reveal{
+opacity:0;
+transform:translateY(40px);
+transition:1s;
+}
+
+.reveal.active{
+opacity:1;
+transform:translateY(0);
+}
+
 </style>
 </head>
 
 <body>
 
+<div class="bg-streak streak1"></div>
+<div class="bg-streak streak2"></div>
+<div class="bg-streak streak3"></div>
+<div class="cursor-glow" id="glow"></div>
+
+<nav>
+<div><b>Rizwan N</b></div>
+<div>
+<a href="#about">About</a>
+<a href="#skills">Skills</a>
+<a href="#experience">Experience</a>
+<a href="#projects">Projects</a>
+<a href="#resume">Resume</a>
+<a href="#cert">Certifications</a>
+<a href="#contact">Contact</a>
+</div>
+</nav>
+
 <!-- HERO -->
+
 <section class="hero">
-<img src="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/RICHU.jpg" class="profile">
-<h1>Rizwan N Portfolio</h1>
-<p>Associate Software Engineer • Full Stack Developer • AI Builder</p>
+<img src="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/RICHU.jpg">
+<h1>Associate Software Engineer</h1>
+<p>AI • Automation • Full-Stack • Testing • Python</p>
 </section>
 
 <!-- ABOUT -->
-<section>
-<h2 onclick="toggle(this)">About Me</h2>
-<div class="content">
-<div class="card">
-<p class="about-text">
-B.Tech Computer Science graduate and college topper with strong foundations in
-software engineering, AI systems, automation tools, and full-stack development.
-I build intelligent bots, developer automation utilities, and interactive
-applications focused on scalable logic and production-ready engineering.
-</p>
-</div>
-</div>
-</section>
 
-<!-- RESUME -->
-<section>
-<h2 onclick="toggle(this)">Resumes</h2>
-<div class="content">
+<section id="about" class="reveal">
+<h2 class="section-title">About Me</h2>
+<div class="card about-text">
+I’m Rizwan N — a software engineer focused on automation systems, AI tools, and scalable web solutions.  
+I build intelligent bots, testing frameworks, and productivity tools such as job-application automation, AI chat interfaces, and smart interaction systems.  
 
-<div class="card">
-<h3>Associate Software Engineer Resume</h3>
-<a class="btn" target="_blank"
-href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Associate%20Software%20Engineer.pdf">
-View Resume
-</a>
-</div>
-
-<div class="card">
-<h3>Full Stack Developer Resume</h3>
-<a class="btn" target="_blank"
-href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Full%20Stack%20Developer.pdf">
-View Resume
-</a>
-</div>
-
-</div>
-</section>
-
-<!-- CERTIFICATION -->
-<section>
-<h2 onclick="toggle(this)">Certifications</h2>
-<div class="content">
-
-<div class="card">
-<h3>AI Mastery Certification</h3>
-<p>
-Completed intensive AI Mastery program covering practical AI tools,
-prompt engineering, workflow automation, and applied AI productivity systems.
-</p>
-<a class="btn" target="_blank"
-href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Be10xCertificate.pdf">
-View BE10X Certificate
-</a>
-</div>
-
+My strength lies in combining Python, web tech, and AI APIs to create real-world usable systems rather than just demo projects. I enjoy solving workflow problems and turning repetitive tasks into automated pipelines.
 </div>
 </section>
 
 <!-- SKILLS -->
-<section>
-<h2 onclick="toggle(this)">Skills</h2>
-<div class="content">
 
-<div class="main-card">
+<section id="skills" class="reveal">
+<h2 class="section-title">Skills</h2>
+
+<div class="skill-main">
 <h3>Languages</h3>
 <span class="bubble">Python</span>
-<span class="bubble">C</span>
 <span class="bubble">Java</span>
+<span class="bubble">C</span>
 <span class="bubble">JavaScript</span>
 </div>
 
-<div class="main-card">
-<h3>Web Technologies</h3>
+<div class="skill-main">
+<h3>Web</h3>
 <span class="bubble">HTML</span>
 <span class="bubble">CSS</span>
-<span class="bubble">Full Stack</span>
+<span class="bubble">React Basics</span>
+<span class="bubble">REST APIs</span>
 </div>
 
-<div class="main-card">
+<div class="skill-main">
 <h3>Databases</h3>
-<span class="bubble">SQL Basics</span>
+<span class="bubble">MySQL</span>
+<span class="bubble">SQLite</span>
 </div>
 
-<div class="main-card">
-<h3>Additional Skills</h3>
+<div class="skill-main">
+<h3>Additional</h3>
 <span class="bubble">Automation</span>
-<span class="bubble">Web Scraping</span>
-<span class="bubble">SEO</span>
+<span class="bubble">ETL Testing</span>
+<span class="bubble">Selenium</span>
 <span class="bubble">Git</span>
+<span class="bubble">Linux</span>
 </div>
 
-</div>
 </section>
 
 <!-- EXPERIENCE -->
-<section>
-<h2 onclick="toggle(this)">Experience</h2>
-<div class="content">
+
+<section id="experience" class="reveal">
+<h2 class="section-title">Experience</h2>
+
+<div class="grid">
 
 <div class="card">
-<h3>SEO Executive</h3>
+<h3>Web Developer Intern</h3>
+<p><b>Cyberfox Solutions</b> — 6 Months</p>
 <ul>
-<li>Technical SEO audits & optimization</li>
-<li>Ranking & visibility improvements</li>
-<li>Analytics & performance tracking</li>
-<li>Metadata & content structuring</li>
+<li>Built responsive client websites</li>
+<li>Optimized performance & UI</li>
+<li>Implemented frontend + backend integrations</li>
 </ul>
 </div>
 
 <div class="card">
-<h3>Web Developer Intern</h3>
+<h3>SEO Executive (Part-time)</h3>
 <ul>
-<li>Responsive UI component building</li>
-<li>API integration</li>
-<li>Performance optimization</li>
-<li>Cross-browser fixes</li>
+<li>Technical SEO audits</li>
+<li>Keyword + ranking optimization</li>
+<li>Analytics-driven improvements</li>
 </ul>
 </div>
 
@@ -266,66 +342,95 @@ View BE10X Certificate
 </section>
 
 <!-- PROJECTS -->
-<section>
-<h2 onclick="toggle(this)">Projects</h2>
-<div class="content">
+
+<section id="projects" class="reveal">
+<h2 class="section-title">Projects</h2>
+
+<div class="grid">
 
 <div class="card">
-<h3>Naukri Job Automation Bot</h3>
-<p>Auto-applies to eligible jobs and filters external listings.</p>
-<p><b>Tech:</b> Python, Automation, Web Scraping</p>
-</div>
-
-<div class="card">
-<h3>AI Chatbot System</h3>
-<p>Context-aware conversational AI assistant.</p>
-<p><b>Tech:</b> Python, AI APIs</p>
+<h3>AI Chatbot</h3>
+<p>Conversational AI assistant using LLM APIs, context memory, and dynamic prompt routing.</p>
 </div>
 
 <div class="card">
-<h3>AI Virtual Mouse</h3>
-<p>Gesture-controlled cursor system.</p>
-<p><b>Tech:</b> Python, OpenCV</p>
+<h3>AI Mouse Controller</h3>
+<p>Computer-vision driven cursor control using hand gesture tracking.</p>
+</div>
+
+<div class="card">
+<h3>Naukri Automation Bot</h3>
+<p>Automates job applications inside platform while skipping external redirects.</p>
 </div>
 
 </div>
+</section>
+
+<!-- RESUME -->
+
+<section id="resume" class="reveal">
+<h2 class="section-title">Resume</h2>
+
+<div class="grid">
+<div class="card">
+<h3>Full Stack Resume</h3>
+<a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Full%20Stack%20Developer.pdf">View</a>
+</div>
+
+<div class="card">
+<h3>Associate Engineer Resume</h3>
+<a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Associate%20Software%20Engineer.pdf">View</a>
+</div>
+</div>
+
+</section>
+
+<!-- CERT -->
+
+<section id="cert" class="reveal">
+<h2 class="section-title">Certification</h2>
+
+<div class="card">
+<h3>Be10x AI Mastery Program</h3>
+<p>Advanced applied AI course covering productivity AI, automation workflows, AI tools usage, and real-world deployment strategies.</p>
+<a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Be10xCertificate.pdf">View Certificate</a>
+</div>
+
 </section>
 
 <!-- CONTACT -->
-<section>
-<h2 onclick="toggle(this)">Contact</h2>
-<div class="content">
-<div class="card">
+
+<section id="contact" class="reveal">
+<h2 class="section-title">Contact</h2>
+
+<div class="card contact">
 <p>📞 +91 7907075183</p>
 <p>📧 rizwannowfal001@gmail.com</p>
 <p>📍 Bangalore, India</p>
-<p>💻 https://github.com/RizwanB312</p>
-<p>🔗 https://www.linkedin.com/in/rizwan-n-72955234a/</p>
+<p>GitHub: RizwanB312</p>
+<p>LinkedIn: linkedin.com/in/rizwan-n-72955234a</p>
 </div>
-</div>
+
 </section>
 
 <script>
-function toggle(el){
-  const c = el.nextElementSibling;
-  c.style.display = c.style.display === "block" ? "none" : "block";
-}
 
-document.querySelectorAll('.card, .main-card').forEach(card=>{
-  card.addEventListener('mousemove', e=>{
-    const r = card.getBoundingClientRect();
-    const dx = (e.clientX-r.left-r.width/2)/(r.width/2);
-    const dy = (e.clientY-r.top-r.height/2)/(r.height/2);
-    card.style.transform =
-      `rotateX(${ -dy*8 }deg) rotateY(${ dx*8 }deg) scale(1.02)`;
-    card.style.boxShadow =
-      `${-dx*20}px ${-dy*20}px 30px rgba(0,0,0,.18)`;
-  });
-  card.addEventListener('mouseleave', ()=>{
-    card.style.transform="";
-    card.style.boxShadow="0 10px 26px rgba(0,0,0,.08)";
-  });
+/* cursor glow */
+const glow=document.getElementById('glow');
+document.addEventListener('mousemove',e=>{
+glow.style.left=e.clientX+'px';
+glow.style.top=e.clientY+'px';
 });
+
+/* reveal on scroll */
+const reveals=document.querySelectorAll('.reveal');
+window.addEventListener('scroll',()=>{
+reveals.forEach(el=>{
+const top=el.getBoundingClientRect().top;
+if(top<window.innerHeight-80) el.classList.add('active');
+});
+});
+
 </script>
 
 </body>
