--- a/index.html
+++ b/index.html
@@ -3,20 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Rizwan N — Portfolio</title>
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
 
 <style>
 
-*{
-margin:0;
-padding:0;
-box-sizing:border-box;
-font-family:'Poppins',sans-serif;
-scroll-behavior:smooth;
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif;scroll-behavior:smooth;}
 
 body{
 background:#ffffff;
@@ -24,85 +17,123 @@ color:#111;
 overflow-x:hidden;
 }
 
-/* ---------- Background streaks ---------- */
+/* ---------- scroll progress ---------- */
 
-.bg-streak{
+#progress{
 position:fixed;
-width:600px;
-height:600px;
-border-radius:50%;
-filter:blur(120px);
-opacity:.25;
-z-index:-1;
-}
-
-.streak1{background:#4f8cff; top:-200px; left:-200px;}
-.streak2{background:#00ffd0; bottom:-200px; right:-200px;}
-.streak3{background:#ffb347; top:40%; left:60%;}
-
-/* ---------- Cursor glow ---------- */
-
-.cursor-glow{
-position:fixed;
-width:200px;
-height:200px;
-border-radius:50%;
-background:radial-gradient(circle,#4f8cff33,transparent);
-pointer-events:none;
+top:0;
+left:0;
+height:4px;
+background:linear-gradient(90deg,#4f8cff,#00ffd0);
+width:0%;
 z-index:9999;
-transform:translate(-50%,-50%);
-transition:transform .08s linear;
 }
 
-/* ---------- Navbar ---------- */
+/* ---------- animated gradient bg ---------- */
+
+.bg{
+position:fixed;
+inset:0;
+z-index:-2;
+background:linear-gradient(120deg,#ffffff,#f5f8ff,#ffffff);
+background-size:200% 200%;
+animation:bgmove 18s infinite linear;
+}
+
+@keyframes bgmove{
+0%{background-position:0 0}
+100%{background-position:200% 200%}
+}
+
+/* ---------- floating shapes ---------- */
+
+.shape{
+position:fixed;
+width:220px;
+height:220px;
+border-radius:40px;
+filter:blur(40px);
+opacity:.18;
+z-index:-1;
+animation:float 14s infinite linear;
+}
+
+.s1{background:#4f8cff; top:10%; left:5%;}
+.s2{background:#00ffd0; top:70%; left:10%; animation-duration:20s;}
+.s3{background:#ffb347; top:30%; right:5%; animation-duration:18s;}
+
+@keyframes float{
+0%{transform:translateY(0) rotate(0)}
+50%{transform:translateY(-80px) rotate(180deg)}
+100%{transform:translateY(0) rotate(360deg)}
+}
+
+/* ---------- cursor spotlight ---------- */
+
+#spot{
+position:fixed;
+width:260px;
+height:260px;
+border-radius:50%;
+pointer-events:none;
+background:radial-gradient(circle,#4f8cff22,transparent 70%);
+transform:translate(-50%,-50%);
+z-index:999;
+}
+
+/* ---------- nav ---------- */
 
 nav{
 position:sticky;
 top:0;
 background:#ffffffcc;
-backdrop-filter:blur(12px);
+backdrop-filter:blur(14px);
 display:flex;
 justify-content:space-between;
 padding:18px 40px;
-box-shadow:0 5px 20px rgba(0,0,0,.06);
 z-index:100;
+box-shadow:0 8px 30px rgba(0,0,0,.06);
 }
 
 nav a{
 text-decoration:none;
 color:#111;
-margin-left:22px;
+margin-left:20px;
 font-weight:600;
+position:relative;
 }
 
-nav a:hover{
-color:#4f8cff;
+nav a::after{
+content:'';
+position:absolute;
+left:0;
+bottom:-6px;
+height:3px;
+width:0%;
+background:#4f8cff;
+transition:.3s;
 }
 
-/* ---------- Hero ---------- */
+nav a:hover::after{width:100%;}
+
+/* ---------- hero ---------- */
 
 .hero{
-display:flex;
-align-items:center;
-justify-content:center;
-flex-direction:column;
 padding:120px 20px 80px;
 text-align:center;
 }
 
 .hero img{
-width:180px;
+width:170px;
 border-radius:50%;
-box-shadow:0 20px 50px rgba(0,0,0,.15);
+box-shadow:0 20px 60px rgba(0,0,0,.18);
 transition:.4s;
 }
 
-.hero img:hover{
-transform:scale(1.08);
-}
+.hero img:hover{transform:scale(1.1) rotate(2deg);}
 
 .hero h1{
-font-size:52px;
+font-size:54px;
 font-weight:800;
 margin-top:25px;
 background:linear-gradient(90deg,#4f8cff,#00ffd0);
@@ -110,90 +141,108 @@ background:linear-gradient(90deg,#4f8cff,#00ffd0);
 -webkit-text-fill-color:transparent;
 }
 
-.hero p{
-font-size:20px;
+.typing{
+font-size:22px;
 margin-top:10px;
 opacity:.8;
+height:30px;
 }
 
-/* ---------- Section ---------- */
+/* ---------- sections ---------- */
 
-section{
-padding:90px 8%;
-}
+section{padding:90px 8%;}
 
-.section-title{
-font-size:34px;
+.title{
+font-size:36px;
 font-weight:800;
-margin-bottom:40px;
+margin-bottom:45px;
+position:relative;
 }
 
-/* ---------- Glass Cards ---------- */
+.title::before{
+content:'';
+position:absolute;
+left:-20px;
+top:8px;
+width:8px;
+height:32px;
+background:#4f8cff;
+border-radius:4px;
+}
+
+/* ---------- glass cards ---------- */
 
 .card{
-background:#ffffffcc;
-backdrop-filter:blur(10px);
-border-radius:22px;
-padding:30px;
-box-shadow:0 20px 60px rgba(0,0,0,.08);
+background:#ffffffdd;
+border-radius:24px;
+padding:32px;
+box-shadow:0 25px 70px rgba(0,0,0,.08);
 transition:.35s;
 transform-style:preserve-3d;
+position:relative;
+overflow:hidden;
 }
 
-.card:hover{
-transform:translateY(-8px) scale(1.02);
-box-shadow:0 30px 80px rgba(0,0,0,.14);
+.card::before{
+content:'';
+position:absolute;
+inset:0;
+background:linear-gradient(120deg,transparent,rgba(255,255,255,.6),transparent);
+transform:translateX(-100%);
+transition:.6s;
 }
 
-/* ---------- About ---------- */
+.card:hover::before{transform:translateX(100%);}
+.card:hover{transform:translateY(-10px) scale(1.02);}
 
-.about-text{
-font-size:19px;
-line-height:1.9;
-font-weight:400;
-}
-
-/* ---------- Skills nested blocks ---------- */
-
-.skill-main{
-background:#f7f9ff;
-padding:28px;
-border-radius:20px;
-margin-bottom:24px;
-box-shadow:inset 0 0 0 2px #eef2ff;
-}
-
-.skill-main h3{
-margin-bottom:16px;
-font-size:20px;
-}
-
-.bubble{
-display:inline-block;
-background:#ffffff;
-padding:10px 16px;
-border-radius:999px;
-margin:8px;
-font-size:14px;
-box-shadow:0 6px 18px rgba(0,0,0,.08);
-transition:.25s;
-}
-
-.bubble:hover{
-transform:scale(1.12);
-background:#4f8cff;
-color:#fff;
-}
-
-/* ---------- Grid ---------- */
+/* ---------- grid ---------- */
 
 .grid{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-gap:30px;
+gap:34px;
 }
 
-/* ---------- Buttons ---------- */
+/* ---------- about ---------- */
+
+.about{
+font-size:19px;
+line-height:1.9;
+}
+
+/* ---------- skills nested ---------- */
+
+.skill-main{
+background:#f6f8ff;
+border-radius:22px;
+padding:26px;
+margin-bottom:24px;
+box-shadow:inset 0 0 0 2px #e9edff;
+position:relative;
+}
+
+.skill-main h3{margin-bottom:16px;}
+
+.bubble{
+display:inline-block;
+background:#fff;
+padding:10px 16px;
+border-radius:999px;
+margin:8px;
+font-size:14px;
+box-shadow:0 8px 22px rgba(0,0,0,.08);
+transition:.25s;
+position:relative;
+overflow:hidden;
+}
+
+.bubble:hover{
+background:#4f8cff;
+color:#fff;
+transform:scale(1.15);
+}
+
+/* ---------- buttons ---------- */
 
 .btn{
 display:inline-block;
@@ -204,31 +253,48 @@ color:#fff;
 text-decoration:none;
 font-weight:600;
 transition:.3s;
+position:relative;
 }
 
 .btn:hover{
-transform:translateY(-3px);
-box-shadow:0 12px 30px rgba(79,140,255,.4);
+transform:translateY(-4px);
+box-shadow:0 16px 40px rgba(79,140,255,.4);
 }
 
-/* ---------- Contact ---------- */
+/* ---------- project hover overlay ---------- */
 
-.contact p{
-margin:12px 0;
-font-size:18px;
+.project{
+position:relative;
+overflow:hidden;
 }
 
-/* ---------- Reveal animation ---------- */
+.project-overlay{
+position:absolute;
+inset:0;
+background:linear-gradient(180deg,transparent,#4f8cffcc);
+color:#fff;
+display:flex;
+align-items:flex-end;
+padding:24px;
+transform:translateY(100%);
+transition:.4s;
+}
+
+.project:hover .project-overlay{
+transform:translateY(0);
+}
+
+/* ---------- reveal ---------- */
 
 .reveal{
 opacity:0;
-transform:translateY(40px);
+transform:translateY(60px);
 transition:1s;
 }
 
-.reveal.active{
+.reveal.show{
 opacity:1;
-transform:translateY(0);
+transform:none;
 }
 
 </style>
@@ -236,17 +302,20 @@ transform:translateY(0);
 
 <body>
 
-<div class="bg-streak streak1"></div>
-<div class="bg-streak streak2"></div>
-<div class="bg-streak streak3"></div>
-<div class="cursor-glow" id="glow"></div>
+<div id="progress"></div>
+<div class="bg"></div>
+<div class="shape s1"></div>
+<div class="shape s2"></div>
+<div class="shape s3"></div>
+<div id="spot"></div>
 
 <nav>
-<div><b>Rizwan N</b></div>
+<b>Rizwan N</b>
 <div>
 <a href="#about">About</a>
-<a href="#skills">Skills</a>
 <a href="#experience">Experience</a>
+<a href="#education">Education</a>
+<a href="#skills">Skills</a>
 <a href="#projects">Projects</a>
 <a href="#resume">Resume</a>
 <a href="#cert">Certifications</a>
@@ -254,30 +323,45 @@ transform:translateY(0);
 </div>
 </nav>
 
-<!-- HERO -->
-
 <section class="hero">
 <img src="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/RICHU.jpg">
 <h1>Associate Software Engineer</h1>
-<p>AI • Automation • Full-Stack • Testing • Python</p>
+<div class="typing" id="typing"></div>
 </section>
 
-<!-- ABOUT -->
-
 <section id="about" class="reveal">
-<h2 class="section-title">About Me</h2>
-<div class="card about-text">
-I’m Rizwan N — a software engineer focused on automation systems, AI tools, and scalable web solutions.  
-I build intelligent bots, testing frameworks, and productivity tools such as job-application automation, AI chat interfaces, and smart interaction systems.  
-
-My strength lies in combining Python, web tech, and AI APIs to create real-world usable systems rather than just demo projects. I enjoy solving workflow problems and turning repetitive tasks into automated pipelines.
+<h2 class="title">About Me</h2>
+<div class="card about">
+Automation-focused developer building AI tools, bots, testing systems, and smart web applications.  
+Specialized in Python automation, job-workflow bots, AI chat systems, and interactive utilities.  
+I focus on real-world usable systems — not toy demos — combining AI + web + scripting for productivity impact.
 </div>
 </section>
 
-<!-- SKILLS -->
+<section id="experience" class="reveal">
+<h2 class="title">Experience</h2>
+<div class="grid">
+<div class="card">
+<h3>Web Developer Intern</h3>
+<p>Built responsive sites, optimized UI performance, integrated backend APIs, and improved load efficiency.</p>
+</div>
+<div class="card">
+<h3>SEO Executive</h3>
+<p>Technical SEO audits, ranking improvements, analytics optimization, and search performance tuning.</p>
+</div>
+</div>
+</section>
+
+<section id="education" class="reveal">
+<h2 class="title">Education</h2>
+<div class="card">
+B.Tech — Computer Science  
+CGPA: 8.78 — College Topper
+</div>
+</section>
 
 <section id="skills" class="reveal">
-<h2 class="section-title">Skills</h2>
+<h2 class="title">Skills</h2>
 
 <div class="skill-main">
 <h3>Languages</h3>
@@ -312,124 +396,90 @@ My strength lies in combining Python, web tech, and AI APIs to create real-world
 
 </section>
 
-<!-- EXPERIENCE -->
-
-<section id="experience" class="reveal">
-<h2 class="section-title">Experience</h2>
-
-<div class="grid">
-
-<div class="card">
-<h3>Web Developer Intern</h3>
-<p><b>Cyberfox Solutions</b> — 6 Months</p>
-<ul>
-<li>Built responsive client websites</li>
-<li>Optimized performance & UI</li>
-<li>Implemented frontend + backend integrations</li>
-</ul>
-</div>
-
-<div class="card">
-<h3>SEO Executive (Part-time)</h3>
-<ul>
-<li>Technical SEO audits</li>
-<li>Keyword + ranking optimization</li>
-<li>Analytics-driven improvements</li>
-</ul>
-</div>
-
-</div>
-</section>
-
-<!-- PROJECTS -->
-
 <section id="projects" class="reveal">
-<h2 class="section-title">Projects</h2>
+<h2 class="title">Projects</h2>
 
 <div class="grid">
 
-<div class="card">
+<div class="card project">
 <h3>AI Chatbot</h3>
-<p>Conversational AI assistant using LLM APIs, context memory, and dynamic prompt routing.</p>
+<div class="project-overlay">LLM powered conversational system</div>
 </div>
 
-<div class="card">
-<h3>AI Mouse Controller</h3>
-<p>Computer-vision driven cursor control using hand gesture tracking.</p>
+<div class="card project">
+<h3>AI Mouse</h3>
+<div class="project-overlay">Gesture controlled cursor system</div>
 </div>
 
-<div class="card">
+<div class="card project">
 <h3>Naukri Automation Bot</h3>
-<p>Automates job applications inside platform while skipping external redirects.</p>
+<div class="project-overlay">Automated job apply pipeline</div>
 </div>
 
 </div>
 </section>
-
-<!-- RESUME -->
 
 <section id="resume" class="reveal">
-<h2 class="section-title">Resume</h2>
-
+<h2 class="title">Resume</h2>
 <div class="grid">
-<div class="card">
-<h3>Full Stack Resume</h3>
-<a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Full%20Stack%20Developer.pdf">View</a>
+<div class="card"><a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Full%20Stack%20Developer.pdf">Full Stack Resume</a></div>
+<div class="card"><a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Associate%20Software%20Engineer.pdf">Associate Resume</a></div>
 </div>
-
-<div class="card">
-<h3>Associate Engineer Resume</h3>
-<a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Associate%20Software%20Engineer.pdf">View</a>
-</div>
-</div>
-
 </section>
-
-<!-- CERT -->
 
 <section id="cert" class="reveal">
-<h2 class="section-title">Certification</h2>
-
+<h2 class="title">Certifications</h2>
 <div class="card">
-<h3>Be10x AI Mastery Program</h3>
-<p>Advanced applied AI course covering productivity AI, automation workflows, AI tools usage, and real-world deployment strategies.</p>
+Be10x AI Mastery — Applied AI tools, workflow automation, productivity AI deployment.
+<br><br>
 <a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Be10xCertificate.pdf">View Certificate</a>
 </div>
-
 </section>
 
-<!-- CONTACT -->
-
 <section id="contact" class="reveal">
-<h2 class="section-title">Contact</h2>
-
-<div class="card contact">
-<p>📞 +91 7907075183</p>
-<p>📧 rizwannowfal001@gmail.com</p>
-<p>📍 Bangalore, India</p>
-<p>GitHub: RizwanB312</p>
-<p>LinkedIn: linkedin.com/in/rizwan-n-72955234a</p>
+<h2 class="title">Contact</h2>
+<div class="card">
+📞 +91 7907075183<br>
+📧 rizwannowfal001@gmail.com<br>
+📍 Bangalore, India<br>
+GitHub: RizwanB312<br>
+LinkedIn: linkedin.com/in/rizwan-n-72955234a
 </div>
-
 </section>
 
 <script>
 
-/* cursor glow */
-const glow=document.getElementById('glow');
+/* spotlight */
+const spot=document.getElementById('spot');
 document.addEventListener('mousemove',e=>{
-glow.style.left=e.clientX+'px';
-glow.style.top=e.clientY+'px';
+spot.style.left=e.clientX+'px';
+spot.style.top=e.clientY+'px';
 });
 
-/* reveal on scroll */
-const reveals=document.querySelectorAll('.reveal');
+/* scroll progress */
 window.addEventListener('scroll',()=>{
-reveals.forEach(el=>{
-const top=el.getBoundingClientRect().top;
-if(top<window.innerHeight-80) el.classList.add('active');
+const h=document.documentElement;
+const sc=(h.scrollTop)/(h.scrollHeight-h.clientHeight)*100;
+document.getElementById('progress').style.width=sc+'%';
 });
+
+/* reveal */
+const els=document.querySelectorAll('.reveal');
+const obs=new IntersectionObserver(es=>{
+es.forEach(e=>{if(e.isIntersecting)e.target.classList.add('show');});
 });
+els.forEach(el=>obs.observe(el));
+
+/* typing */
+const text="AI • Automation • Full Stack • Testing";
+let i=0;
+function type(){
+if(i<text.length){
+document.getElementById('typing').innerHTML+=text[i++];
+setTimeout(type,60);
+}
+}
+type();
 
 </script>
 
