--- a/index.html
+++ b/index.html
@@ -17,24 +17,18 @@ color:#111;
 overflow-x:hidden;
 }
 
-/* ---------- scroll progress ---------- */
+/* progress bar */
 
 #progress{
-position:fixed;
-top:0;
-left:0;
-height:4px;
+position:fixed;top:0;left:0;height:4px;
 background:linear-gradient(90deg,#4f8cff,#00ffd0);
-width:0%;
-z-index:9999;
+width:0%;z-index:9999;
 }
 
-/* ---------- animated gradient bg ---------- */
+/* bg */
 
 .bg{
-position:fixed;
-inset:0;
-z-index:-2;
+position:fixed;inset:0;z-index:-2;
 background:linear-gradient(120deg,#ffffff,#f5f8ff,#ffffff);
 background-size:200% 200%;
 animation:bgmove 18s infinite linear;
@@ -45,16 +39,11 @@ animation:bgmove 18s infinite linear;
 100%{background-position:200% 200%}
 }
 
-/* ---------- floating shapes ---------- */
+/* shapes */
 
 .shape{
-position:fixed;
-width:220px;
-height:220px;
-border-radius:40px;
-filter:blur(40px);
-opacity:.18;
-z-index:-1;
+position:fixed;width:220px;height:220px;border-radius:40px;
+filter:blur(40px);opacity:.18;z-index:-1;
 animation:float 14s infinite linear;
 }
 
@@ -68,72 +57,48 @@ animation:float 14s infinite linear;
 100%{transform:translateY(0) rotate(360deg)}
 }
 
-/* ---------- cursor spotlight ---------- */
+/* spotlight */
 
 #spot{
-position:fixed;
-width:260px;
-height:260px;
-border-radius:50%;
+position:fixed;width:260px;height:260px;border-radius:50%;
 pointer-events:none;
 background:radial-gradient(circle,#4f8cff22,transparent 70%);
 transform:translate(-50%,-50%);
 z-index:999;
 }
 
-/* ---------- nav ---------- */
+/* nav */
 
 nav{
-position:sticky;
-top:0;
+position:sticky;top:0;
 background:#ffffffcc;
 backdrop-filter:blur(14px);
-display:flex;
-justify-content:space-between;
+display:flex;justify-content:space-between;
 padding:18px 40px;
 z-index:100;
 box-shadow:0 8px 30px rgba(0,0,0,.06);
 }
 
 nav a{
-text-decoration:none;
-color:#111;
-margin-left:20px;
-font-weight:600;
-position:relative;
+text-decoration:none;color:#111;
+margin-left:20px;font-weight:600;
 }
 
-nav a::after{
-content:'';
-position:absolute;
-left:0;
-bottom:-6px;
-height:3px;
-width:0%;
-background:#4f8cff;
-transition:.3s;
-}
-
-nav a:hover::after{width:100%;}
-
-/* ---------- hero ---------- */
+/* hero */
 
 .hero{
-padding:120px 20px 80px;
+padding:110px 20px 70px;
 text-align:center;
 }
 
 .hero img{
-width:170px;
-border-radius:50%;
+width:150px;border-radius:50%;
 box-shadow:0 20px 60px rgba(0,0,0,.18);
 transition:.4s;
 }
 
-.hero img:hover{transform:scale(1.1) rotate(2deg);}
-
 .hero h1{
-font-size:54px;
+font-size:42px;
 font-weight:800;
 margin-top:25px;
 background:linear-gradient(90deg,#4f8cff,#00ffd0);
@@ -141,36 +106,24 @@ background:linear-gradient(90deg,#4f8cff,#00ffd0);
 -webkit-text-fill-color:transparent;
 }
 
-.typing{
-font-size:22px;
-margin-top:10px;
-opacity:.8;
-height:30px;
+.hero h2{
+margin-top:12px;
+font-size:18px;
+font-weight:600;
+opacity:.85;
 }
 
-/* ---------- sections ---------- */
+/* sections */
 
 section{padding:90px 8%;}
 
 .title{
-font-size:36px;
+font-size:34px;
 font-weight:800;
-margin-bottom:45px;
-position:relative;
+margin-bottom:40px;
 }
 
-.title::before{
-content:'';
-position:absolute;
-left:-20px;
-top:8px;
-width:8px;
-height:32px;
-background:#4f8cff;
-border-radius:4px;
-}
-
-/* ---------- glass cards ---------- */
+/* cards */
 
 .card{
 background:#ffffffdd;
@@ -178,24 +131,11 @@ border-radius:24px;
 padding:32px;
 box-shadow:0 25px 70px rgba(0,0,0,.08);
 transition:.35s;
-transform-style:preserve-3d;
-position:relative;
-overflow:hidden;
 }
 
-.card::before{
-content:'';
-position:absolute;
-inset:0;
-background:linear-gradient(120deg,transparent,rgba(255,255,255,.6),transparent);
-transform:translateX(-100%);
-transition:.6s;
-}
+.card:hover{transform:translateY(-8px) scale(1.02);}
 
-.card:hover::before{transform:translateX(100%);}
-.card:hover{transform:translateY(-10px) scale(1.02);}
-
-/* ---------- grid ---------- */
+/* grid */
 
 .grid{
 display:grid;
@@ -203,24 +143,14 @@ grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
 gap:34px;
 }
 
-/* ---------- about ---------- */
-
-.about{
-font-size:19px;
-line-height:1.9;
-}
-
-/* ---------- skills nested ---------- */
+/* skills */
 
 .skill-main{
 background:#f6f8ff;
 border-radius:22px;
 padding:26px;
 margin-bottom:24px;
-box-shadow:inset 0 0 0 2px #e9edff;
 }
-
-.skill-main h3{margin-bottom:16px;}
 
 .bubble{
 display:inline-block;
@@ -230,16 +160,9 @@ border-radius:999px;
 margin:8px;
 font-size:14px;
 box-shadow:0 8px 22px rgba(0,0,0,.08);
-transition:.25s;
 }
 
-.bubble:hover{
-background:#4f8cff;
-color:#fff;
-transform:scale(1.15);
-}
-
-/* ---------- buttons ---------- */
+/* buttons */
 
 .btn{
 display:inline-block;
@@ -249,50 +172,19 @@ background:#4f8cff;
 color:#fff;
 text-decoration:none;
 font-weight:600;
-transition:.3s;
 }
 
-.btn:hover{
-transform:translateY(-4px);
-box-shadow:0 16px 40px rgba(79,140,255,.4);
-}
-
-/* ---------- project hover overlay ---------- */
-
-.project{
-position:relative;
-overflow:hidden;
-}
-
-.project-overlay{
-position:absolute;
-inset:0;
-background:linear-gradient(180deg,transparent,#4f8cffcc);
-color:#fff;
-display:flex;
-align-items:flex-end;
-padding:24px;
-transform:translateY(100%);
-transition:.4s;
-}
-
-.project:hover .project-overlay{
-transform:translateY(0);
-}
-
-/* ---------- STRONG SCROLL SPRING REVEAL ---------- */
+/* scroll reveal */
 
 .reveal{
 opacity:0;
-transform:translateY(90px) scale(.92);
-filter:blur(8px);
-transition:all 1s cubic-bezier(.18,.89,.32,1.28);
+transform:translateY(60px);
+transition:all .8s ease;
 }
 
 .reveal.show{
 opacity:1;
-transform:translateY(0) scale(1);
-filter:blur(0);
+transform:none;
 }
 
 </style>
@@ -323,12 +215,84 @@ filter:blur(0);
 
 <section class="hero">
 <img src="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/RICHU.jpg">
-<h1>Associate Software Engineer • Full Stack Developer • Python & C • AI & Automation</h1>
-<div class="typing" id="typing"></div>
+<h1>Rizwan N Portfolio</h1>
+<h2>Associate Software Engineer • Full Stack Developer • Python & C • AI & Automation</h2>
 </section>
 
-<!-- KEEP ALL YOUR EXISTING SECTIONS BELOW EXACTLY SAME -->
-<!-- (about, experience, education, skills, projects, resume, cert, contact unchanged) -->
+<section id="about" class="reveal">
+<h2 class="title">About Me</h2>
+<div class="card">
+Automation-focused developer building AI tools, bots, testing systems, and smart web applications.
+</div>
+</section>
+
+<section id="experience" class="reveal">
+<h2 class="title">Experience</h2>
+<div class="grid">
+<div class="card">
+<h3>Web Developer Intern</h3>
+<p>Built responsive sites, optimized UI, integrated APIs.</p>
+</div>
+<div class="card">
+<h3>SEO Executive</h3>
+<p>Technical SEO audits and ranking improvements.</p>
+</div>
+</div>
+</section>
+
+<section id="education" class="reveal">
+<h2 class="title">Education</h2>
+<div class="card">
+B.Tech — Computer Science<br>
+CGPA: 8.78 — College Topper
+</div>
+</section>
+
+<section id="skills" class="reveal">
+<h2 class="title">Skills</h2>
+
+<div class="skill-main">
+<h3>Languages</h3>
+<span class="bubble">Python</span>
+<span class="bubble">Java</span>
+<span class="bubble">C</span>
+<span class="bubble">JavaScript</span>
+</div>
+
+</section>
+
+<section id="projects" class="reveal">
+<h2 class="title">Projects</h2>
+<div class="grid">
+<div class="card">AI Chatbot</div>
+<div class="card">AI Mouse</div>
+<div class="card">Naukri Automation Bot</div>
+</div>
+</section>
+
+<section id="resume" class="reveal">
+<h2 class="title">Resume</h2>
+<div class="grid">
+<div class="card"><a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Full%20Stack%20Developer.pdf">Full Stack Resume</a></div>
+<div class="card"><a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Associate%20Software%20Engineer.pdf">Associate Resume</a></div>
+</div>
+</section>
+
+<section id="cert" class="reveal">
+<h2 class="title">Certifications</h2>
+<div class="card">
+Be10x AI Mastery Certification
+</div>
+</section>
+
+<section id="contact" class="reveal">
+<h2 class="title">Contact</h2>
+<div class="card">
+📞 +91 7907075183<br>
+📧 rizwannowfal001@gmail.com<br>
+📍 Bangalore, India
+</div>
+</section>
 
 <script>
 
@@ -339,14 +303,14 @@ spot.style.left=e.clientX+'px';
 spot.style.top=e.clientY+'px';
 });
 
-/* scroll progress */
+/* progress */
 window.addEventListener('scroll',()=>{
 const h=document.documentElement;
 const sc=(h.scrollTop)/(h.scrollHeight-h.clientHeight)*100;
 document.getElementById('progress').style.width=sc+'%';
 });
 
-/* spring reveal */
+/* reveal */
 const els=document.querySelectorAll('.reveal');
 const obs=new IntersectionObserver(entries=>{
 entries.forEach(entry=>{
@@ -354,20 +318,9 @@ if(entry.isIntersecting){
 entry.target.classList.add('show');
 }
 });
-},{threshold:.22});
+},{threshold:.15});
 
 els.forEach(el=>obs.observe(el));
-
-/* typing */
-const text="AI • Automation • Full Stack • Testing";
-let i=0;
-function type(){
-if(i<text.length){
-document.getElementById('typing').innerHTML+=text[i++];
-setTimeout(type,60);
-}
-}
-type();
 
 </script>
 
